2010-07-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSNetServices.h:
	* Source/GSAvahiClient.h:
	* Source/GSNetServices.h:
	* Source/GSAvahiNetService.m:
	Attempt to get ahavi code working without breaking ABI.

2010-07-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSNetServices.h: Update to a version working with
	both mDNSResponder and Avahi.
	* Source/GSAvahiNetService.m: Fix leftover duplicate variables.
	* Source/GSNetServices.h: Revert to r30954, but add padding ivars to
	the Avahi classes.
	Make Avahi-NSNetServices work again.

2010-07-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSNetServices.m: Replace with the new version.
	* Source/GSNetServices.h: Add missing header.
	Add code missing from the previous patch.

2010-03-27 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Add check for avahi-client.
	* configure: Regenerate
	* base.make.in: Add build-variables for Avahi.
	* Source/GNUmakefile: Add avahi-based NSNetServices to build
	* Source/GSAvahiRunLoopIntegration.h:
	* Source/GSAvahiRunLoopIntegration.m:
	* Source/GSAvahiClient.h:
	* Source/GSAvahiClient.m:
	* Source/GSAvahiNetService.m:
	* Source/GSAvahiNetServiceBrowser.m: Add avahi-based NSNetServices
	implementation
	* Source/GSMDNSNetServies.m: Move mDNS-implementation to this file
	* Source/GSNetServices.h: New private header for NSNetServices
	* Source/NSNetServices.m: Abstract superclasses
	* Headers/Foundation/NSNetServices.h: Adopt to new class structure
	* Headers/Additions/GNUstepBase/GSConfig.h.in: Add zeroconf related
	variables.
	* Header/Additions/GNUstepBase/Additions.h: 
	* Headers/Additions/GNUstepBase/NSNetServices+GNUstepBase.h: Add header
	with extensions for the avahi-based NSNetService class.
	Implement NSNetService and NSNetServiceBrowser on top of the
	avahi-client API. Both classes are now abstract superclasses of the
	concrete implementations based on the mDNSResponder or avahi-client